<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rba.facebookgraphql.result.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chkID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perm_id"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chkName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perm_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chkFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perm_first_name"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chkLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perm_last_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chkEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perm_email"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chkGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perm_gender"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chkCover"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perm_cover"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSearch"
                android:layout_width="0dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/lblID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextView"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/lblName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextView"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/lblFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextView"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/lblLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextView"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/lblEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextView"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/lblGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextView"/>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgCover"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="fitXY"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>

    </LinearLayout>

</FrameLayout>
